css/style.css
/*
COLORS:
Light green: #7ed56f
Medium green: #55c57a
Dark green: #28b485
*/
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  font-family: "Lato, sans-serif";
  font-weight: 400;
  font-size: 16px;
  line-height: 1.7;
  padding: 30px;
}

.header{
  position: relative;
  height: 95vh;
  background-image: linear-gradient(
    to right bottom,
    rgba(126, 213, 111, 0.8),
    rgba(40, 180, 131, 0.8)
  ),
  url(../img/hero.jpg);
  background-size: cover;
  background-position: top;
  clip-path: polygon(0 0, 100% 0,100% 75vh, 0 100%);
}
.logo-box{
  position: absolute;
  top: 40px;
  left: 40px;
}
.logo{
  height: 35px;
}
.heading-primary{
  color: #fff;
  text-transform: uppercase;
}
.heading-primary-main{
  display: block;
  font-size: 60px;
  font-weight: 400;
  letter-spacing: 35px;
}
.heading-primary-sub{
  display: block;
  font-size: 20px;
  font-weight: 700;
  letter-spacing: 17.4px;
}

